@@ -1,6 +1,7 @@
 2014-03-31  Marc Glisse  <marc.glisse@inria.fr>
 
 	* mpn/arm/dive_1.asm, mpn/arm/invert_limb.asm: Use RODATA.
+	* acinclude.m4 ([long long reliability tests]): Declare functions.
 
 2014-03-30  Marc Glisse  <marc.glisse@inria.fr>
 
